# monoburg

./: .gitignore  .gitlab-ci.yml  .last-cl-gen  AUTHORS  ChangeLog  Makefile.am  NEWS  NOTICE  TODO  bootstrap  configure.ac  monoburg.c  monoburg.h  parser.y
config/: Makefile.am
man/: Makefile.am  monoburg.1
src/: Makefile.am  check.c  check.h  emit.c  emit.h  emit_cost.c  emit_files.c  emit_functions.c  emit_kids.c  emit_pretty_print.c  main.c  mem_clean.c  mem_clean.h  monoburg.h  named_subtree.c  named_subtree.h  parser.h  parser.y  rule.c  rule.h
tests/: Makefile.am  sample.brg  sample.c.ref
vcs/: monoburg.rb
